--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
     "firebase-tools": "^12.4.6",
+    "focus-trap-react": "^10.2.1",
+    "react-day-picker": "^8.8.2",
     "react-js-pagination": "^3.0.2",
-    "react-popper": "^2.3.0"
+    "react-popper": "^2.3.0",
+    "react-query": "^3.39.3",
+    "styled-component": "^2.8.0",
+    "tailwind": "^4.0.0"
   }
 }
