--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase-tools": "^12.4.6",
     "focus-trap-react": "^10.2.1",
     "react-day-picker": "^8.8.2",
+    "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.2",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.3",
