로그인, 로그아웃 완료

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vercel/node": "^2.14.3",
     "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.1",
     "firebase-tools": "^12.4.6",
     "focus-trap-react": "^10.2.1",
     "react-day-picker": "^8.8.2",
